--- a/django-app/requirements.txt
+++ b/django-app/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.5.2
+crispy-bootstrap5==0.7
 Django==4.1.1
-sqlparse==0.4.3
+django-crispy-forms==1.14.0
 psycopg2-binary==2.9.3
+sqlparse==0.4.3
