django-app: now the default database is PostgreSQL

--- a/.dev.env
+++ b/.dev.env
@@ -8,5 +8,5 @@ POSTGRES_DB="django-db"
 POSTGRES_USER="django"
 POSTGRES_PASSWORD="mysecretpassword"
 POSTGRES_PORT=5432
-POSTGRES_HOSTNAME="plb-app-db"
+POSTGRES_HOSTNAME="ghost-app-db"
 PGDATA=/var/lib/postgresql/data
