--- a/django-app/requirements.txt
+++ b/django-app/requirements.txt
@@ -3,5 +3,6 @@ crispy-bootstrap5==0.7
 Django==4.1.1
 django-crispy-forms==1.14.0
 googletrans==3.0.0
+mutagen==1.45.1
 psycopg2-binary==2.9.3
 sqlparse==0.4.3
