Created and integrated in settings.py the new Redis container

--- a/.dev.env
+++ b/.dev.env
@@ -10,3 +10,4 @@ POSTGRES_PASSWORD="mysecretpassword"
 POSTGRES_PORT=5432
 POSTGRES_HOSTNAME="ghost-app-db"
 PGDATA=/var/lib/postgresql/data
+GHOST_REDIS_HOSTNAME="ghost-app-redis"
