--- a/django-app/requirements.txt
+++ b/django-app/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 crispy-bootstrap5==0.7
 Django==4.1.1
 django-crispy-forms==1.14.0
+fleep==1.0.1
 googletrans==3.0.0
 mutagen==1.45.1
 psycopg2-binary==2.9.3
