--- a/django-app/requirements.txt
+++ b/django-app/requirements.txt
@@ -2,6 +2,7 @@ amqp==5.1.1
 asgiref==3.5.2
 async-timeout==4.0.2
 billiard==3.6.4.0
+bleach==5.0.1
 celery==5.2.7
 certifi==2022.9.24
 chardet==3.0.4
@@ -13,6 +14,7 @@ crispy-bootstrap5==0.7
 Deprecated==1.2.13
 Django==4.1.1
 django-crispy-forms==1.14.0
+django-tinymce==3.5.0
 fleep==1.0.1
 googletrans==3.0.0
 h11==0.9.0
@@ -35,6 +37,8 @@ rfc3986==1.5.0
 six==1.16.0
 sniffio==1.3.0
 sqlparse==0.4.3
+tinycss2==1.1.1
 vine==5.0.0
 wcwidth==0.2.5
+webencodings==0.5.1
 wrapt==1.14.1
