--- a/django-app/requirements.txt
+++ b/django-app/requirements.txt
@@ -17,6 +17,7 @@ django-crispy-forms==1.14.0
 django-tinymce==3.5.0
 fleep==1.0.1
 googletrans==3.0.0
+gunicorn==20.1.0
 h11==0.9.0
 h2==3.2.0
 hpack==3.0.0
