docker-compose-dev: renamed app-web container and image names

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -14,8 +14,8 @@ services:
         volumes:
             - app-data:${PGDATA}
     app-web:
-        image: ghost-web-dev
-        container_name: ghost-web-dev
+        image: ghost-app-web-dev
+        container_name: ghost-app-web-dev
         build:
             context: .
             dockerfile: django.Dockerfile
