--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -3,7 +3,38 @@ upstream gunicorn_server {
 }
 
 server {
-    listen ${GHOST_NGINX_PORT} deferred;
+	listen 80 default_server;
+	return 444;
+}
+
+server {
+    listen ${GHOST_NGINX_PORT};
+    listen [::]:${GHOST_NGINX_PORT};
+    server_name soulscribe.ml;
+    return 301 https://$server_name$request_uri;
+}
+
+server {
+    listen ${GHOST_NGINX_HTTPS_PORT} ssl http2;
+	listen [::]:${GHOST_NGINX_HTTPS_PORT} ssl http2;
+	server_name soulscribe.ml;
+    # listen ${GHOST_NGINX_PORT} deferred;
+
+    # SSL
+	ssl_certificate /etc/letsencrypt/live/soulscribe.ml/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/soulscribe.ml/privkey.pem;
+
+	ssl_session_cache shared:le_nginx_SSL:10m;
+	ssl_session_timeout 1440m;
+	ssl_session_tickets off;
+
+	ssl_protocols TLSv1.2 TLSv1.3;
+	ssl_prefer_server_ciphers off;
+
+	ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
+
+	client_max_body_size 4G;
+	keepalive_timeout 5;
 
     location /static {
         alias /vol/static;
