--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -18,7 +18,7 @@ services:
         container_name: ghost-app-web-dev
         build:
             context: .
-            dockerfile: django.Dockerfile
+            dockerfile: django-app.Dockerfile
         env_file:
             - .dev.env
         volumes:
@@ -33,7 +33,7 @@ services:
         container_name: ghost-app-celery-dev
         build:
             context: .
-            dockerfile: celery.Dockerfile
+            dockerfile: django-app.Dockerfile
         env_file:
             - .dev.env
         volumes:
