--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -40,6 +40,7 @@ services:
     build:
       context: .
       dockerfile: django-app.Dockerfile
+    command: ["celery", "-A", "ghost_base_folder", "worker", "-l", "info"]
     depends_on:
       - app-db
       - app-redis
