docker-compose-prod: added media-data volume for celery service

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -40,6 +40,8 @@ services:
     build:
       context: .
       dockerfile: django-app.Dockerfile
+    volumes:
+      - media-data:${GHOST_MEDIA_FILES_FOLDER}
     command: ["celery", "-A", "ghost_base_folder", "worker", "-l", "info"]
     depends_on:
       - app-db
