--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -58,6 +58,7 @@ services:
       dockerfile: nginx/nginx.Dockerfile
     volumes:
       - static-data:/vol/static
+      - media-data:/vol/media
     ports:
       - "${GHOST_NGINX_PORT}:80"
       - "${GHOST_NGINX_HTTPS_PORT}:443"
