--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -40,6 +40,10 @@ server {
         alias /vol/static;
     }
 
+    location /media {
+        alias /vol/media;
+    }
+
     location / {
         try_files $uri @proxy_to_app;
     }
