.gitignore: added file

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .idea/
 django-app/ghost_base_folder/email_settings.py
 django-app/ghost_base_folder/admin_emails.py
+django-app/ghost_base_folder/admin_url.py
 *__pycache__
 django-app/db.sqlite3
 .vscode/
