Gitlab-CI: implemented workaround to fix secure-files download problem

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,8 +29,9 @@ build:
     SECURE_FILES_DOWNLOAD_PATH: './django-app/ghost_base_folder/'
   script:
     - echo "---------------- BUILD STAGE ----------------"
-    - apk add --no-cache curl bash
-    - curl --silent "https://gitlab.com/gitlab-org/incubation-engineering/mobile-devops/load-secure-files/-/raw/main/installer" | bash
+    - apk add --no-cache ruby ruby-json git
+    - git clone https://gitlab.com/gitlab-org/incubation-engineering/mobile-devops/load-secure-files.git
+    - ruby ./load-secure-files/load.rb
     - docker-compose -f docker-compose-prod.yml build --pull --quiet
     - docker-compose -f docker-compose-prod.yml push
 
@@ -52,8 +53,9 @@ deploy:
     SECURE_FILES_DOWNLOAD_PATH: './django-app/ghost_base_folder/'
   script:
     - echo "---------------- RELEASE STAGE ----------------"
-    - apk add --update curl bash
-    - curl --silent "https://gitlab.com/gitlab-org/incubation-engineering/mobile-devops/load-secure-files/-/raw/main/installer" | bash
+    - apk add --no-cache ruby ruby-json git
+    - git clone https://gitlab.com/gitlab-org/incubation-engineering/mobile-devops/load-secure-files.git
+    - ruby ./load-secure-files/load.rb
     - docker-compose -f docker-compose-prod.yml build --pull --quiet
     - docker-compose -f docker-compose-prod.yml push
   only:
