--- a/.dev.env
+++ b/.dev.env
@@ -16,3 +16,4 @@ POSTGRES_PORT=5432
 POSTGRES_HOSTNAME="ghost-app-db"
 PGDATA=/var/lib/postgresql/data
 GHOST_REDIS_HOSTNAME="ghost-app-redis"
+GHOST_APP_IMAGE="ghost-app"
