--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "6379:6379"
   app-db:
-    image: postgres:alpine
+    image: postgres:14-alpine
     container_name: ${POSTGRES_HOSTNAME}
     env_file:
       - .dev.env
