--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -7,7 +7,7 @@ services:
       - "6379:6379"
   app-db:
     restart: always
-    image: postgres:alpine
+    image: postgres:14-alpine
     container_name: ${POSTGRES_HOSTNAME}
     env_file:
       - .env
