docker-compose, Nginx: fixed bug related to environment variables
Environment variables can't be passed to a Dockerfile without declaring
them explicitly at build time. It's possible to achieve the expected
behaviour by declaring ARG variables both inside the docker-compose file
and the Dockerfile.

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -71,6 +71,9 @@ services:
       - .env
     build:
       context: .
+      args:
+        GHOST_FULLCHAIN_PEM: ${GHOST_FULLCHAIN_PEM}
+        GHOST_PRIVKEY_PEM: ${GHOST_PRIVKEY_PEM}
       dockerfile: nginx/nginx.Dockerfile
     volumes:
       - static-data:/vol/static
