Gitlab-CI: changed way to load https certificates in the Nginx container
Now the files are downloaded and moved in the specific directory instead
of loading theme as temporary files in ENVIRONMENT VARIABLES (that are
outside the build scope of docker). The same environment variables now
contains the local file path of the certificates (inside the nginx
folder).

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,7 @@ build:
     - apk add --no-cache ruby ruby-json git
     - git clone https://gitlab.com/gitlab-org/incubation-engineering/mobile-devops/load-secure-files.git
     - ruby ./load-secure-files/load.rb
+    - mv django-app/ghost_base_folder/*.pem nginx/
     - docker-compose -f docker-compose-prod.yml build --pull --quiet
     - docker-compose -f docker-compose-prod.yml push
 
