--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -2,8 +2,14 @@ upstream gunicorn_server {
     server app-web:${GHOST_WEB_APP_PORT};
 }
 
+# Filter to avoid unwanted http and https requests to Django
 server {
-	listen 80 default_server;
+	listen ${GHOST_NGINX_PORT} default_server;
+	listen ${GHOST_NGINX_HTTPS_PORT} ssl default_server;
+
+	ssl_certificate /etc/letsencrypt/live/soulscribe.ml/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/soulscribe.ml/privkey.pem;
+
 	return 444;
 }
 
@@ -32,7 +38,9 @@ server {
 
 	ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
 
+    # REQUEST BODY SIZE
 	client_max_body_size 4G;
+	client_body_buffer_size 50M;
 	keepalive_timeout 5;
 
     location /static {
